style: reconfigured ARIA roles, fixed stretched image

--- a/css/styles.css
+++ b/css/styles.css
@@ -179,7 +179,6 @@ nav h1 a {
   margin: 0;
   max-width: 100%;
   min-height: 248px;
-  min-width: 100%;
 }
 #restaurants-list li h1 {
   color: #f18200;
